# nixops-encrypted-links

./: .envrc  default.nix  pyproject.toml  shell.nix
nixops_encrypted_links/: lib.py  plugin.py
nixops_encrypted_links/nix/: default.nix  options.nix  ssh-tunnel.nix
