[tool.poetry]
name = "nixops_encrypted_links"
version = "1.0"
description = "Encrypted links support for NixOps"
authors = ["adisbladis <adam.hose@tweag.io>"]
license = "MIT"
include = [ "nixops_encrypted_links/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.7"
nixops = {path = "../nixops"}

[tool.poetry.plugins."nixops"]
encrypted_links = "nixops_encrypted_links.plugin"

[tool.poetry.dev-dependencies]
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
